# scribd-pdf-downloader

./: README.md  README.rst  debug_test.py  launch_gui.py  pyproject.toml  test_url_extraction.py
scribd_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: gui_error.txt
src/scribdl/: __init__.py  gui.py  scribdl.py  selenium_downloader.py
test/: Scribd.txt  expect_text.txt  test_images.py  test_text.py
test_output/: Scribd.html
